// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.reporting.v2;

option java_package = "org.wfanet.measurement.internal.reporting.v2";
option java_multiple_files = true;

// Parameters for a Liquid Legions sketch.
message LiquidLegionsSketchParams {
  // The decay rate of the Liquid Legions sketch. Required.
  double decay_rate = 1;

  // The maximum size of the Liquid Legions sketch. Required.
  int64 max_size = 2;

  // The size of the distribution of the sampling indicator value, i.e.
  // fingerprint size. Required.
  int64 sampling_indicator_size = 3;
}

// Parameters for a Reach-Only Liquid Legions sketch.
message ReachOnlyLiquidLegionsSketchParams {
  // The decay rate of the Liquid Legions sketch. REQUIRED.
  double decay_rate = 1;

  // The maximum size of the Liquid Legions sketch. REQUIRED.
  int64 max_size = 2;
}

message LiquidLegionsV2 {
  // Parameters for sketch. REQUIRED.
  LiquidLegionsSketchParams sketch_params = 1;

  // The maximum frequency to reveal in the histogram.
  int32 maximum_frequency = 4;
}

// Configuration for the Reach-Only Liquid Legions v2 protocol.
message ReachOnlyLiquidLegionsV2 {
  // Parameters for sketch. REQUIRED.
  ReachOnlyLiquidLegionsSketchParams sketch_params = 1;
}
